syntax = "proto3";

package pb;

import "trade.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message GetTradeByIDRequest {
  string trade_id = 1;
}

message GetTradeByIDResponse {
  Trades trade = 1;
}